<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context="com.daguerreo.crypt.sdescalculator.sdes.SDesActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSdesText"
        android:hint="@string/sdes_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etSdesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilKey"
        android:hint="@string/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilSdesText">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvKeyHelper"
        android:text="@string/sdes_key_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilKey"/>

    <LinearLayout
        android:id="@+id/llSdesButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/default_padding"
        android:layout_below="@id/tvKeyHelper">

        <android.support.v7.widget.AppCompatButton
            android:text="@string/encrypt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="encrypt"/>
        <android.support.v7.widget.AppCompatButton
            android:text="@string/decrypt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:onClick="decrypt"/>
    </LinearLayout>

    <View
        android:id="@+id/dvdSdes"
        style="@style/Divider"
        android:layout_below="@id/llSdesButtons"/>

    <fragment
        android:id="@+id/step_by_step_fragment"
        android:name="com.daguerreo.crypt.sdescalculator.StepByStepFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dvdSdes" />
</RelativeLayout>
